Animation on Mobile Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,7 +279,8 @@ nav > ul > li > a:visited {
 }
 
 .logo {
-    width: 90px;
+    width: 40vw;
+    max-width: 90px;
     height: auto;
 }
 
